# os2mo-sdtool-plus

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Justfile  README.md  alembic.ini  docker-compose.yml  flake.nix  pyproject.toml  queries.graphql  schema.graphql
.reuse/: dep5
alembic/: env.py  script.py.mako
alembic/versions/: 0f89bea353d5_create_rundb_table.py
dev-environment/: init.config.yml  mo-config.yml
docker/: start.sh
scripts/: README.md  all-engagements.sql  common.py  convert_omada_eng_user_keys.py  engagement-dublets.sql  full_sync.py  parse_grafana_log.py  patch_managers_with_engagements.py  populate_managers_with_engagements.py  prefix_eng_user_keys.py  remove_engagement_duplicates.py  remove_leave_duplicates.py  sd-sync.sh  sd_dar_addr_comparison.py  sd_engagement_json.py  sd_missing_persons.py  send_email_test.py  setup_RH_root_units.py  setup_RM_root_units.py  setup_RSD_root_units.py  setup_test_adm.py  setup_test_adm_org_RM.py  sync-all-mo-engagements.py  terminate_engagements.py  test_send_email.py  update_engagement_placement_cache.py
sdtoolplus/: Dockerfile  __main__.py  addresses.py  apos.py  app.py  config.py  depends.py  diff_org_trees.py  email.py  events.py  exceptions.py  fastapi.py  filters.py  graphql.py  job_positions.py  log.py  main.py  middleware.py  mo_class.py  mo_org_unit_importer.py  mo_org_unit_level.py  models.py  roots.py  string_utils.py  timeline.py  tree_diff_executor.py  tree_tools.py  types.py
sdtoolplus/autogenerated_graphql_client/: __init__.py  _testing__create_employee.py  _testing__create_engagement.py  _testing__create_org_unit.py  _testing__create_person.py  _testing__get_employee.py  _testing__get_facet_class.py  _testing__get_org_unit.py  _testing__get_org_unit_address.py  _testing__get_org_unit_types.py  _testing__update_related_units.py  address_types.py  async_base_client.py  base_model.py  client.py  create_address.py  create_association.py  create_class.py  create_engagement.py  create_leave.py  create_org_unit.py  create_person.py  create_person_address.py  delete_address.py  delete_org_function.py  enums.py  exceptions.py  get_actor.py  get_address_timeline.py  get_addresses.py  get_all_engagements.py  get_association_timeline.py  get_associations.py  get_class.py  get_engagement_timeline.py  get_engagement_uuids.py  get_engagements.py  get_events.py  get_facet_class.py  get_facet_uuid.py  (+42 more)
sdtoolplus/db/: engine.py  models.py  rundb.py
sdtoolplus/minisync/: api.py  engagement.py  models.py
sdtoolplus/mo/: engagement.py  person.py  timeline.py
tests/: conftest.py  mo.v7.graphql  test_addresses.py  test_app.py  test_class.py  test_config.py  test_diff_org_trees.py  test_events.py  test_filters.py  test_graphql.py  test_log.py  test_main.py  test_mo_org_unit_importer.py  test_models.py  test_rundb.py  test_sync.py  test_timeline.py  test_tree_diff_executor.py
(+79 files in other folders)
