[tool.poetry]
name = "os2mo-sdtool-plus"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "n"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.3"
gql = "^3.4.0"
raclients = "^3.1.4"
ra-utils = "^1.13.9"
deepdiff = "^6.3.0"
anytree = "^2.8.0"
pydantic = "^1.10.7"
more-itertools = ">=8.14.0"
hypothesis = "^6.75.2"
another-sd-client = "^1.4.0"

[tool.poetry.group.dev.dependencies]

[tool.poetry.group.test.dependencies]
pre-commit = "^3.0.0"
pytest = "^7.3.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
pytest-split = "^0.8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
